# 67960-final-project

./: .gitignore  main.py  moes.py  pyproject.toml
code/: exp.ipynb  exp.py  moes.py  slurm_run_exp.sh  test_models.py  trace.json  transformer.py
code/saved_models/: model_HashMoE.pth  model_NonLinearMoE.pth  model_OrthogonalMoE.pth  model_RandomMoE.pth  model_RegularMoE.pth  model_ShittyMoE.pth  model_UniformMoE.pth
