[project]
name = "67960-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "seaborne>=1.1.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
